--- a/2/index.html
+++ b/2/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Quiz App</title>
-</head>
-<body>
-  Hello Beasky
-  <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="quiz-container">
+        <div class="quiz-header">
+        <h2>Qusetion Text</h2>
+        <ul>
+          <li>
+            <input type="radio" id="a" name="'answer" />
+            <label for="">Qusetion</label>
+          </li>
+          <li>
+            <input type="radio" id="b" name="'answer" />
+            <label for="">Qusetion</label>
+          </li>
+          <li>
+            <input type="radio" id="c" name="'answer" />
+            <label for="">Qusetion</label>
+          </li>
+          <li>
+            <input type="radio" id="d" name="'answer" />
+            <label for="">Qusetion</label>
+          </li>
+        </ul>
+      </div>
+      <button>submit</button>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
