--- a/2/index.html
+++ b/2/index.html
@@ -15,19 +15,19 @@
         <ul>
           <li>
             <input type="radio" id="a" name="'answer" />
-            <label for="">Qusetion</label>
+            <label for="a">Qusetion</label>
           </li>
           <li>
             <input type="radio" id="b" name="'answer" />
-            <label for="">Qusetion</label>
+            <label for="b">Qusetion</label>
           </li>
           <li>
             <input type="radio" id="c" name="'answer" />
-            <label for="">Qusetion</label>
+            <label for="c">Qusetion</label>
           </li>
           <li>
             <input type="radio" id="d" name="'answer" />
-            <label for="">Qusetion</label>
+            <label for="d">Qusetion</label>
           </li>
         </ul>
       </div>
