--- a/2/index.html
+++ b/2/index.html
@@ -11,27 +11,27 @@
     <div class="wrapper">
       <div class="quiz-container">
         <div class="quiz-header">
-        <h2>Qusetion Text</h2>
+        <h2 id="question">Qusetion Text</h2>
         <ul>
           <li>
             <input type="radio" id="a" name="'answer" />
-            <label for="a">Qusetion</label>
+            <label id="a_text" for="a">Qusetion</label>
           </li>
           <li>
             <input type="radio" id="b" name="'answer" />
-            <label for="b">Qusetion</label>
+            <label id="b_text" for="b">Qusetion</label>
           </li>
           <li>
             <input type="radio" id="c" name="'answer" />
-            <label for="c">Qusetion</label>
+            <label id="c_text" for="c">Qusetion</label>
           </li>
           <li>
             <input type="radio" id="d" name="'answer" />
-            <label for="d">Qusetion</label>
+            <label id="d_text" for="d">Qusetion</label>
           </li>
         </ul>
       </div>
-      <button>submit</button>
+      <button id="submit">submit</button>
       </div>
     </div>
     <script src="script.js"></script>
